--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.62.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "14.0.3",
